tests/Fixtures/Torture/Bad/cast_str_int.g
// EXPECT G028
import String;
kernel { entry func Main() { let String s="a"; let int x = s as int; } }
